--- a/0x02-CSS_advanced/styles/27-style.css
+++ b/0x02-CSS_advanced/styles/27-style.css
@@ -226,7 +226,7 @@ a:active {
     margin-bottom: 5rem;
 }
 
-.section-here .section-inner {
+.section-hero .section-inner {
     padding: 10rem 40rem 2rem 0;
 }
 
